--- a/package.json
+++ b/package.json
@@ -22,14 +22,25 @@
     "cssmin": "^0.4.3",
     "grunt": "^1.4.1",
     "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-htmlmin": "^2.4.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-filerev": "^2.3.1",
     "grunt-sass": "^3.1.0",
+    "grunt-usemin": "^3.1.1",
     "htmlmin": "0.0.7",
+    "imagemin": "^8.0.0",
+    "imagemin-cli": "^6.0.0",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^6.0.1",
     "onchange": "^7.1.0",
-    "parallelshell": "^3.0.2",
+    "parallelshell": "^3.0.1",
     "rimraf": "^2.6.2",
     "time-grunt": "^2.0.0",
     "uglifyjs": "^2.4.11",
