--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "copyfonts": "copyfiles -f node_modules/font-awesome/* dist/fonts",
     "imagemin": "imagemin img/* --out-dir 'dist/img'",
     "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html ",
-    "build": "npm run clean && npm run copyfonts && npm run imagemin && npm run usemin"
+    "build": "npm run clean && npm run copyfonts && npm run imagemin && npm run usemin",
+    "preshrinkwrap": " npm-shrinkwrap.json",
+    "postshrinkwrap": "npm-shrinkwrap.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "cssmin": "^0.4.3",
+    "del": "^6.0.0",
     "grunt": "^1.4.1",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^2.0.0",
@@ -35,7 +38,14 @@
     "grunt-sass": "^3.1.0",
     "grunt-usemin": "^3.1.1",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rev": "^9.0.0",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.30",
     "htmlmin": "0.0.7",
     "imagemin": "^8.0.0",
     "imagemin-cli": "^6.0.0",
